Add profile pic and publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,82 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{mielko2023uv,
+  title={UV irradiation remodels the specificity landscape of transcription factors},
+  abbr={PNAS},
+  author={Mielko, Zachery and Zhang, Yuning and Sahay, Harshit and Liu, Yiling and Schaich, Matthew A and Schnable, Brittani and Morrison, Abigail M and Burdinski, Debbie and Adar, Sheera and Pufall, Miles and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={120},
+  number={11},
+  pages={e2217422120},
+  year={2023},
+  publisher={National Acad Sciences},
+  html={https://www.pnas.org/doi/full/10.1073/pnas.2217422120},
+  code={https://github.com/zmielko/UV_Bind}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{afek2020dna,
+  title={DNA mismatches reveal conformational penalties in protein--DNA recognition},
+  abbr={Nature},
+  author={Afek, Ariel and Shi, Honglue and Rangadurai, Atul and Sahay, Harshit and Senitzki, Alon and Xhani, Suela and Fang, Mimi and Salinas, Raul and Mielko, Zachery and Pufall, Miles A and others},
+  journal={Nature},
+  volume={587},
+  number={7833},
+  pages={291--296},
+  year={2020},
+  publisher={Nature Publishing Group UK London},
+  html={https://www.nature.com/articles/s41586-020-2843-2}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
+@article{belo2019unexpected,
+  title={Unexpected implications of STAT3 acetylation revealed by genetic encoding of acetyl-lysine},
+  abbr={BBA-GS},
+  author={Belo, Yael and Mielko, Zachery and Nudelman, Hila and Afek, Ariel and Ben-David, Oshrit and Shahar, Anat and Zarivach, Raz and Gordan, Raluca and Arbely, Eyal},
+  journal={Biochimica et Biophysica Acta (BBA)-General Subjects},
+  volume={1863},
+  number={9},
+  pages={1343--1350},
+  year={2019},
+  publisher={Elsevier},
+  html={https://www.sciencedirect.com/science/article/abs/pii/S0304416519301485}
+}
+
+@article{martin2019qbic,
+  title={QBiC-Pred: quantitative predictions of transcription factor binding changes due to sequence variants},
+  abbr={NAR},
+  author={Martin, Vincentius and Zhao, Jingkang and Afek, Ariel and Mielko, Zachery and Gord{\^a}n, Raluca},
+  journal={Nucleic acids research},
   volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+  number={W1},
+  pages={W127--W135},
+  year={2019},
+  publisher={Oxford University Press},
+  html={https://academic.oup.com/nar/article/47/W1/W127/5494732}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{aquino2020cnd,
+  title={cnd-1/NeuroD1 functions with the homeobox gene ceh-5/Vax2 and hox gene ceh-13/labial to specify aspects of RME and DD neuron fate in Caenorhabditis elegans},
+  abbr={G3},
+  author={Aquino-Nunez, Wendy and Mielko, Zachery E and Dunn, Trae and Santorella, Elise M and Hosea, Ciara and Leitner, Lauren and McCalla, Derrica and Simms, Claire and Verola, Wendy M and Vijaykumar, Sharanya and others},
+  journal={G3: Genes, Genomes, Genetics},
+  volume={10},
+  number={9},
+  pages={3071--3085},
+  year={2020},
+  publisher={Oxford University Press},
+  html={https://academic.oup.com/g3journal/article/10/9/3071/6060125}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{christensen2020ngn,
+  title={ngn-1/neurogenin activates transcription of multiple terminal selector transcription factors in the Caenorhabditis elegans nervous system},
+  abbr={G3},
+  author={Christensen, Elyse L and Beasley, Alexandra and Radchuk, Jessica and Mielko, Zachery E and Preston, Elicia and Stuckett, Sidney and Murray, John I and Hudson, Martin L},
+  journal={G3: Genes, Genomes, Genetics},
+  volume={10},
+  number={6},
+  pages={1949--1962},
+  year={2020},
+  publisher={Oxford University Press},
+  html={https://academic.oup.com/g3journal/article/10/6/1949/6026359}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
